syntax = "proto3";

option java_outer_classname = "ConfirmProto";
option java_package = "model.protobuf";

//提交审核
message ConfirmRequest{
  string uuid = 1;
  string secret = 2;
  uint32 recordId = 3;
}

message ConfirmResponse {
  Result result = 1;

  enum Result{
    SUCCESS = 0;
    FAILED = 1;
  }
}
